form visiblity and navigation correction

--- a/src/app/(templates)/resume/v2/premium_template_comp.module.css
+++ b/src/app/(templates)/resume/v2/premium_template_comp.module.css
@@ -106,7 +106,7 @@
 .section_box {
     display: flex;
     flex-direction: column;
-    /* gap: 5%;*/
+    /* gap: 5%; */
 }
 
 .skill_box {
@@ -125,6 +125,7 @@
 .section_text {
     font-size: .95rem;
     line-height: 150%;
+    word-break: break-all;
 }
 
 .skill_item {
