--- a/src/app/form/resume_form_comp.module.css
+++ b/src/app/form/resume_form_comp.module.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     background: linear-gradient(160deg, #020617, #3f3f3f, #020617);
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 .header {
@@ -47,8 +47,8 @@
     gap: 24px;
     padding: 32px;
     border-radius: 10px;
-    background: #969696;
-    color: white;
+    background: #d1d1d1;
+    color: rgb(0, 0, 0);
     overflow: scroll;
 }
 
@@ -76,7 +76,7 @@
     width: 100%;
     padding: 20px;
     border-radius: 8px;
-    background: #2a2a2a;
+    background: #c0c0c0;
     display: flex;
     flex-direction: column;
     gap: 16px;
